# kubectlgetall

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.zig  build.zig.zon  pyproject.toml  requirements.txt  towncrier.toml
.changes/: 0.5.0.md  header.tpl.md
.changes/unreleased/: Added-20260626-183445.yaml  Added-20260627-005611.yaml  Added-20260627-011730.yaml  Added-20260627-015822.yaml  Added-20260628-211450.yaml  Changed-20260626-173521.yaml  Changed-20260626-173632.yaml  Changed-20260627-020039.yaml  Changed-20260628-133837.yaml  Fixed-20260627-150100.yaml
.github/workflow/: workflow.yaml
.github/workflows/: main.yml  workflow.yaml
changelog.d/: +60826432.feature.md  +7bbe14bb.misc.md  +fd133a0b.misc.md
changes/: +507336d4.removal.md  +updates.misc.md  1.removal.md  11.feature.md  2.feature.md  21.removal.md  3.feature.md  4.feature.md  5.feature.md  6.feature.md  7.misc.md
kubectlgetall/: cli.py
src/: args.zig  cluster.zig  database.zig  diff.zig  get.zig  help.zig  log.zig  main.zig  snapshot.zig  table.zig  types.zig  utils.zig
